--- a/package.json
+++ b/package.json
@@ -39,6 +39,7 @@
     "bitcoinjs-lib": "^7.0.0-rc.0",
     "cache-manager": "^5.7.6",
     "dotenv": "^16.4.5",
+    "ethers": "^6.13.4",
     "helmet": "^7.1.0",
     "nest-winston": "^1.9.7",
     "node-cron": "^3.0.3",
@@ -57,7 +58,7 @@
     "@nestjs/testing": "^10.0.0",
     "@types/express": "^4.17.17",
     "@types/jest": "^29.5.2",
-    "@types/node": "^20.5.7",
+    "@types/node": "^22.10.2",
     "@types/supertest": "^6.0.0",
     "@typescript-eslint/eslint-plugin": "^8.5.0",
     "@typescript-eslint/parser": "^8.5.0",
