Added placehodler earn service

--- a/.env_template
+++ b/.env_template
@@ -45,6 +45,11 @@ DAL_URLS=link1,link2
 #Underlying RPC url or urls
 XRP_WALLET_URLS=link1,link2
 
+#Network
+NETWORK=coston|songbird|flare|coston2
+#For earn section, provide json link from github
+EARN_JSON_URL=https://raw.githubusercontent.com/...
+
 ##Secrets
 #For secrets json creation
 # Input 1 if you want secrets to be created via .env, 0 if you will do it manually
