--- a/docker-example/docker-compose.yml
+++ b/docker-example/docker-compose.yml
@@ -4,9 +4,9 @@ services:
   postgres:
     image: postgres:13
     environment:
-      POSTGRES_DB: executor_minting_redemptions
-      POSTGRES_USER: executor
-      POSTGRES_PASSWORD: executor
+      POSTGRES_DB: ${POSTGRES_DB}
+      POSTGRES_USER: ${POSTGRES_USER}
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     ports:
       - "5432:5432"
     volumes:
