--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -10,6 +10,7 @@ services:
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
     volumes:
         - postgres_data:/var/lib/postgresql/data
+    restart: unless-stopped
 
   # Application Service
   app:
@@ -28,6 +29,7 @@ services:
     depends_on:
       - postgres
     command: "/bin/sh -c '(yarn build) && (yarn run start)'"
+    restart: unless-stopped
 
 volumes:
   postgres_data:
