--- a/.env_template
+++ b/.env_template
@@ -47,8 +47,10 @@ XRP_WALLET_URLS=link1,link2
 
 #Network
 NETWORK=coston|songbird|flare|coston2
-#For earn section, provide json link from github
-EARN_JSON_URL=https://raw.githubusercontent.com/...
+#For earn section, provide json link from github, if not set empty array will be returned in earn endpoint
+#EARN_JSON_URL=https://raw.githubusercontent.com/...
+#API key for wallets endpoint access
+#ADMIN_API_KEY=someapikey
 
 ##Secrets
 #For secrets json creation
